# pepper

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  deny.toml
benchmarks/pepper-filesystem-benchmark/: Cargo.toml  README.md
benchmarks/pepper-filesystem-benchmark/src/: main.rs
benchmarks/pepper-kafka-benchmark/: Cargo.toml
benchmarks/pepper-kafka-benchmark/src/: main.rs
benchmarks/pepper-kafka-operations-benchmark/: Cargo.toml
benchmarks/pepper-kafka-operations-benchmark/src/: main.rs
benchmarks/pepper-ordered-log-benchmark/: Cargo.toml
benchmarks/pepper-ordered-log-benchmark/src/: main.rs
benchmarks/pepper-phase0/: Cargo.toml  README.md
benchmarks/pepper-phase0/client-smoke/: go.mod  go.sum  go_smoke.go  librdkafka_smoke.py  phase11_transaction_smoke.py  phase13-java-client.properties  phase13_secure_go.go  phase13_secure_python.py  phase13_secure_smoke.py  python_smoke.py
benchmarks/pepper-phase0/evidence/: consensus-density-2026-07-23.json  filesystem-sqlite-smoke-2026-07-23.json  kafka-comparator-smoke-2026-07-23.json  model-check-2026-07-23.json  phase0-qualification-2026-07-23.json  phase1-observability-overhead-2026-07-23.json  phase1-qualification-2026-07-23.json  phase10-client-qualification-2026-07-23.json  phase10-group-qualification-2026-07-23.json  phase11-client-qualification-2026-07-23.json  phase11-kafka-candidate-2026-07-23.json  phase11-performance-qualification-2026-07-23.json  phase11-transaction-qualification-2026-07-23.json  phase12-compaction-tiering-qualification-2026-07-23.json  phase12-kafka-candidate-2026-07-23.json  phase12-performance-qualification-2026-07-23.json  phase13-kafka-candidate-2026-07-23.json  phase13-performance-qualification-2026-07-23.json  phase13-production-release-status-2026-07-23.json  phase13-qualification-context-2026-07-23.json  phase13-secure-client-qualification-2026-07-23.json  phase13-security-soak-qualification-2026-07-23.json  phase2-qualification-2026-07-23.json  phase3-qualification-2026-07-23.json  phase4-qualification-2026-07-23.json  phase5-qualification-2026-07-23.json  phase6-qualification-2026-07-23.json  phase7-qualification-2026-07-23.json  phase7-qualification-context-2026-07-23.json  phase8-qualification-2026-07-23.json  phase8-qualification-context-2026-07-23.json  phase9-kafka-candidate-2026-07-23.json  phase9-phase8-rerun-2026-07-23.json  phase9-qualification-2026-07-23.json  phase9-qualification-context-2026-07-23.json  s3-put-cost-smoke-2026-07-23.json
benchmarks/pepper-phase0/kafka/: README.md  compose.yaml
benchmarks/pepper-phase0/pepper/: node1.toml  node2.toml  node3.toml
benchmarks/pepper-phase0/src/: main.rs
benchmarks/pepper-phase0/suites/: consensus-density.toml  kafka-comparator.toml  local-smoke.toml  pepper-platform.toml
benchmarks/pepper-s3-throughput/: Cargo.toml  Dockerfile.fio  compose.yaml  compression-matrix.toml  ec-matrix.toml  matrix.toml  tail-matrix.toml
benchmarks/pepper-s3-throughput/config/: ec1.toml  ec2.toml  ec3.toml  ec4.toml  ec5.toml  ec6.toml  ec7.toml  ec8.toml  ec9.toml  node1.toml  node2.toml  node3.toml  single.toml  single2.toml  single3.toml
benchmarks/pepper-s3-throughput/src/: cache_fill.rs  loadgen.rs  main.rs  matrix.rs  summarize.rs
benchmarks/pepper-sqlite-benchmark/: Cargo.toml  README.md
benchmarks/pepper-sqlite-benchmark/src/: main.rs
crates/pepper-agent/: Cargo.toml
crates/pepper-agent/src/: api_error.rs  bucket_api.rs  compute.rs  diagnostics.rs  ec_planner.rs  fast_path.rs  filesystem_api.rs  http.rs  main.rs  metrics.rs  namespace_api.rs  network_services.rs  object_write.rs  objects.rs  pins.rs  placement.rs  publication.rs  reconstructed_cache.rs  repair.rs  s3_api.rs  small_object_pack.rs  sqlite_api.rs
crates/pepper-agent/tests/: multinode.rs
crates/pepper-bucket/: Cargo.toml
crates/pepper-bucket/src/: lib.rs
crates/pepper-buffer/: Cargo.toml
crates/pepper-buffer/src/: lib.rs
crates/pepper-cli/: Cargo.toml
crates/pepper-cli/src/: main.rs
crates/pepper-commit/: Cargo.toml
crates/pepper-commit/src/: lib.rs
crates/pepper-compute/: Cargo.toml
crates/pepper-compute/src/: lib.rs
crates/pepper-config/: Cargo.toml
crates/pepper-config/src/: lib.rs
crates/pepper-consensus/: Cargo.toml
crates/pepper-consensus/src/: lib.rs
crates/pepper-crypto/: Cargo.toml
crates/pepper-crypto/src/: lib.rs
crates/pepper-dag/: Cargo.toml
crates/pepper-dag/fuzz/: Cargo.toml
crates/pepper-dag/src/: lib.rs
crates/pepper-dataset/: Cargo.toml
crates/pepper-dataset/src/: lib.rs
crates/pepper-durability/: Cargo.toml
crates/pepper-durability/src/: lib.rs
crates/pepper-extent/: Cargo.toml
crates/pepper-extent/src/: lib.rs
crates/pepper-guest-agent/: Cargo.toml
crates/pepper-guest-agent/src/: main.rs
crates/pepper-kafka/: Cargo.toml
crates/pepper-kafka-model/: Cargo.toml
crates/pepper-kafka-model/proptest-regressions/: lib.txt
crates/pepper-kafka-model/src/: lib.rs  rsm.rs
crates/pepper-kafka-protocol/: Cargo.toml
crates/pepper-kafka-protocol/src/: lib.rs
crates/pepper-kafka/examples/: broker.rs
crates/pepper-kafka/src/: compaction.rs  controller.rs  groups.rs  lib.rs  operations.rs  security.rs  server.rs  tiering.rs  transactions.rs
crates/pepper-kafka/tests/: kafka_mvp.rs  security_integration.rs
crates/pepper-keyed-runtime/: Cargo.toml
crates/pepper-keyed-runtime/src/: lib.rs
crates/pepper-merkle/: Cargo.toml
crates/pepper-merkle/examples/: million_keys.rs
crates/pepper-merkle/fuzz/: Cargo.toml
crates/pepper-merkle/src/: lib.rs
crates/pepper-metadata/: Cargo.toml
crates/pepper-namespace/: Cargo.toml
system-tests/: CI.md  Cargo.toml  README.md
system-tests/ci/: qualification-policy.json  removal-gates.json
system-tests/docker/: Dockerfile  README.md
system-tests/src/: lib.rs  qualification.rs
system-tests/tests/: qualification_policy.rs  removal_gate.rs  schema_contract.rs
system-tests/topologies/: wan-direct.example.json  wan-tailscale.example.json
(+129 files in other folders)
