# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "crates/pepper-agent",
    "crates/pepper-cli",
    "crates/pepper-compute",
    "crates/pepper-config",
    "crates/pepper-crypto",
    "crates/pepper-guest-agent",
    "crates/pepper-metadata",
    "crates/pepper-network",
    "crates/pepper-placement",
    "crates/pepper-storage",
    "crates/pepper-types",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/peppermesh/pepper"
homepage = "https://peppermesh.org"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = "3.0"
getrandom = "0.3"
hex = "0.4"
prost = "0.14"
quinn = "0.11"
rcgen = "0.14"
redb = "2.6"
reed-solomon-erasure = "6.0"
rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "1.1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tikv-jemallocator = "0.7"
async-trait = "0.1"
futures-util = "0.3"
fs2 = "0.4"
prost-build = "0.14"
protoc-bin-vendored = "3.2"
