# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "benchmarks/pepper-filesystem-benchmark",
    "benchmarks/pepper-kafka-benchmark",
    "benchmarks/pepper-kafka-operations-benchmark",
    "benchmarks/pepper-ordered-log-benchmark",
    "benchmarks/pepper-phase0",
    "benchmarks/pepper-s3-throughput",
    "benchmarks/pepper-sqlite-benchmark",
    "crates/pepper-agent",
    "crates/pepper-bucket",
    "crates/pepper-buffer",
    "crates/pepper-cli",
    "crates/pepper-commit",
    "crates/pepper-compute",
    "crates/pepper-config",
    "crates/pepper-consensus",
    "crates/pepper-crypto",
    "crates/pepper-dag",
    "crates/pepper-dataset",
    "crates/pepper-durability",
    "crates/pepper-extent",
    "crates/pepper-filesystem",
    "crates/pepper-guest-agent",
    "crates/pepper-kafka",
    "crates/pepper-kafka-model",
    "crates/pepper-kafka-protocol",
    "crates/pepper-keyed-runtime",
    "crates/pepper-merkle",
    "crates/pepper-metadata",
    "crates/pepper-namespace",
    "crates/pepper-network",
    "crates/pepper-observability",
    "crates/pepper-ordered-log",
    "crates/pepper-placement",
    "crates/pepper-publication",
    "crates/pepper-rsm",
    "crates/pepper-sqlite",
    "crates/pepper-sqlite-vfs",
    "crates/pepper-storage",
    "crates/pepper-types",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/peppermesh/pepper"
homepage = "https://peppermesh.org"

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.7"
axum = "0.8"
blake3 = "1.8"
base64 = "0.22"
bytes = "1.12"
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = "3.0"
getrandom = "0.3"
hex = "0.4"
hmac = "0.12"
libc = "0.2"
libsqlite3-sys = { version = "=0.38.1", features = ["bundled"] }
io-uring = "0.7.13"
crc32c = "0.6"
crc32fast = "1.5"
openraft = { version = "0.9.21", features = ["serde", "storage-v2"] }
prost = "0.14"
quinn = "0.11"
quick-xml = { version = "0.41", features = ["serialize"] }
rcgen = "0.14"
redb = "2.6"
reed-solomon-erasure = "6.0"
rustix = { version = "1.1", features = ["fs"] }
rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha1 = "0.10"
md5 = { package = "md-5", version = "0.10" }
memmap2 = "0.9"
multer = "3.1"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "1.1"
tower-http = { version = "0.6", features = ["trace"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tikv-jemallocator = "0.7"
async-trait = "0.1"
kafka-protocol = { version = "=0.15.1", features = ["messages_enums"] }
futures-util = "0.3"
fs2 = "0.4"
zstd = "0.13"
zstd-safe = "7.2"
prost-build = "0.14"
protoc-bin-vendored = "3.2"
cc = "1.2"
