# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-filesystem-benchmark"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
pepper-filesystem = { version = "0.3.0", path = "../../crates/pepper-filesystem" }
pepper-types = { version = "0.3.0", path = "../../crates/pepper-types" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
