# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-kafka-operations-benchmark"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "Phase 9 Kafka scaling and non-regression qualification"

[dependencies]
pepper-kafka = { path = "../../crates/pepper-kafka", version = "0.3.0" }
pepper-rsm = { path = "../../crates/pepper-rsm", version = "0.3.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
