# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-s3-throughput"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Repeatable Docker S3 throughput and bottleneck-isolation benchmark"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

