# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-agent"
version = "0.1.0"
publish = false
rust-version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "PepperMesh distributed storage and Firecracker compute node agent"

[dependencies]
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
clap.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
async-trait.workspace = true
futures-util.workspace = true
getrandom.workspace = true
hex.workspace = true
redb.workspace = true
reed-solomon-erasure.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tikv-jemallocator.workspace = true
pepper-compute = { version = "0.1.0", path = "../pepper-compute" }
pepper-config = { version = "0.1.0", path = "../pepper-config" }
pepper-crypto = { version = "0.1.0", path = "../pepper-crypto" }
pepper-metadata = { version = "0.1.0", path = "../pepper-metadata" }
pepper-network = { version = "0.1.0", path = "../pepper-network" }
pepper-placement = { version = "0.1.0", path = "../pepper-placement" }
pepper-storage = { version = "0.1.0", path = "../pepper-storage" }
pepper-types = { version = "0.1.0", path = "../pepper-types" }

[dev-dependencies]
reqwest.workspace = true
tempfile = "3.23"
