# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-agent"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "PepperMesh distributed storage and Firecracker compute node agent"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
crc32c = { workspace = true }
crc32fast = { workspace = true }
fs2 = { workspace = true }
futures-util = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
libc = { workspace = true }
md5 = { workspace = true }
memmap2 = { workspace = true }
multer = { workspace = true }
pepper-bucket = { version = "0.3.0", path = "../pepper-bucket" }
pepper-compute = { version = "0.3.0", path = "../pepper-compute" }
pepper-config = { version = "0.3.0", path = "../pepper-config" }
pepper-consensus = { version = "0.3.0", path = "../pepper-consensus" }
pepper-crypto = { version = "0.3.0", path = "../pepper-crypto" }
pepper-dag = { version = "0.3.0", path = "../pepper-dag" }
pepper-filesystem = { version = "0.3.0", path = "../pepper-filesystem" }
pepper-merkle = { version = "0.3.0", path = "../pepper-merkle" }
pepper-metadata = { version = "0.3.0", path = "../pepper-metadata" }
pepper-namespace = { version = "0.3.0", path = "../pepper-namespace" }
pepper-network = { version = "0.3.0", path = "../pepper-network" }
pepper-placement = { version = "0.3.0", path = "../pepper-placement" }
pepper-publication = { version = "0.3.0", path = "../pepper-publication" }
pepper-storage = { version = "0.3.0", path = "../pepper-storage" }
pepper-types = { version = "0.3.0", path = "../pepper-types" }
quick-xml = { workspace = true }
redb = { workspace = true }
reed-solomon-erasure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
tikv-jemallocator = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zstd = { workspace = true }
zstd-safe = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = "3.23"
