# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-cli"
version = "0.1.0"
publish = false
rust-version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "Command-line client for PepperMesh"

[[bin]]
name = "pepper"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tikv-jemallocator.workspace = true
pepper-network = { version = "0.1.0", path = "../pepper-network" }
pepper-types = { version = "0.1.0", path = "../pepper-types" }
