# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-cli"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "Command-line client for PepperMesh"

[[bin]]
name = "pepper"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
pepper-filesystem = { version = "0.2.0", path = "../pepper-filesystem" }
pepper-network = { version = "0.2.0", path = "../pepper-network" }
pepper-types = { version = "0.2.0", path = "../pepper-types" }
reqwest = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
