# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-compute"
version = "0.1.0"
publish = false
rust-version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "Compute job validation for PepperMesh"

[dependencies]
pepper-types = { version = "0.1.0", path = "../pepper-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
