# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-config"
version = "0.1.0"
publish = false
rust-version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "Configuration types and validation for PepperMesh"

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
pepper-types = { version = "0.1.0", path = "../pepper-types" }

[dev-dependencies]
tempfile = "3.23"
