# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-config"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "Configuration types and validation for PepperMesh"

[dependencies]
pepper-types = { version = "0.3.0", path = "../pepper-types" }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.23"
