# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-consensus"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "Multi-group Raft consensus runtime for PepperMesh namespaces"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
openraft = { workspace = true }
pepper-dag = { version = "0.2.0", path = "../pepper-dag" }
pepper-merkle = { version = "0.2.0", path = "../pepper-merkle" }
pepper-metadata = { version = "0.2.0", path = "../pepper-metadata" }
pepper-namespace = { version = "0.2.0", path = "../pepper-namespace" }
pepper-network = { version = "0.2.0", path = "../pepper-network" }
pepper-placement = { version = "0.2.0", path = "../pepper-placement" }
pepper-storage = { version = "0.2.0", path = "../pepper-storage" }
pepper-types = { version = "0.2.0", path = "../pepper-types" }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
[dev-dependencies]
pepper-config = { version = "0.2.0", path = "../pepper-config" }
pepper-crypto = { version = "0.2.0", path = "../pepper-crypto" }
tempfile = "3.23"
