# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-dag"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "Bounded typed DAG traversal for PepperMesh"

[dependencies]
async-trait = { workspace = true }
pepper-types = { version = "0.3.0", path = "../pepper-types" }
serde_json = { workspace = true }
thiserror = { workspace = true }
[dev-dependencies]
pepper-config = { version = "0.3.0", path = "../pepper-config" }
pepper-metadata = { version = "0.3.0", path = "../pepper-metadata" }
pepper-storage = { version = "0.3.0", path = "../pepper-storage" }
serde = { workspace = true }
tempfile = "3.23"
tokio = { workspace = true }
