# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-dataset"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "Product-neutral versioned dataset and immutable-index contracts for Pepper"

[dependencies]
async-trait = { workspace = true }
blake3 = { workspace = true }
pepper-types = { path = "../pepper-types", version = "0.3.0" }
thiserror = { workspace = true }
