# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-kafka-model"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
async-trait = { workspace = true }
blake3 = { workspace = true }
pepper-rsm = { version = "0.3.0", path = "../pepper-rsm" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1.9"
tokio = { workspace = true }
