# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-kafka"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "Kafka topic, partition, controller, and broker runtime for Pepper"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
kafka-protocol = { workspace = true }
pepper-buffer = { path = "../pepper-buffer", version = "0.3.0" }
pepper-extent = { path = "../pepper-extent", version = "0.3.0" }
pepper-kafka-protocol = { path = "../pepper-kafka-protocol", version = "0.3.0" }
pepper-ordered-log = { path = "../pepper-ordered-log", version = "0.3.0" }
pepper-rsm = { path = "../pepper-rsm", version = "0.3.0" }
pepper-storage = { path = "../pepper-storage", version = "0.3.0" }
pepper-types = { path = "../pepper-types", version = "0.3.0" }
reed-solomon-erasure = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26"
uuid = { version = "1.23", features = ["serde", "v4"] }

[dev-dependencies]
pepper-config = { path = "../pepper-config", version = "0.3.0" }
pepper-metadata = { path = "../pepper-metadata", version = "0.3.0" }
rcgen = { workspace = true }
tempfile = "3.23"
