# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-keyed-runtime"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "Product-neutral keyed execution and hierarchical resource governor for Pepper"

[dependencies]
pepper-observability = { version = "0.3.0", path = "../pepper-observability" }
thiserror = { workspace = true }
tokio = { workspace = true }
