# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-metadata"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "Embedded metadata storage for PepperMesh"

[dependencies]
pepper-types = { version = "0.3.0", path = "../pepper-types" }
redb = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.23"
