# SPDX-License-Identifier: Apache-2.0

[package]
name = "pepper-namespace"
version = { workspace = true }
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
homepage = { workspace = true }
description = "Deterministic transactional namespace state machine for PepperMesh"

[dependencies]
async-trait = { workspace = true }
hex = { workspace = true }
pepper-dag = { version = "0.3.0", path = "../pepper-dag" }
pepper-merkle = { version = "0.3.0", path = "../pepper-merkle" }
pepper-types = { version = "0.3.0", path = "../pepper-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
[dev-dependencies]
pepper-config = { version = "0.3.0", path = "../pepper-config" }
pepper-metadata = { version = "0.3.0", path = "../pepper-metadata" }
pepper-storage = { version = "0.3.0", path = "../pepper-storage" }
tempfile = "3.23"
tokio = { workspace = true }
